<resources>
    <string name="app_name">그라운드</string>

    <!-- Intro Activity-->
    <string name="intro_activity_register_btn">가입하기</string>
    <string name="intro_activity_login_btn">로그인하기</string>
    <string name="intro_sub_help_txt">가입과 함께 그라운드의 이용약관, 개인정보취급방침에 동의하시게 됩니다.</string>

    <!-- bottom menu -->
    <string name="bottom_menu_btn_1">홈</string>
    <string name="bottom_menu_btn_2">게시판</string>
    <string name="bottom_menu_btn_3">설정</string>

    <!-- Register Activity-->
    <string name="register_activity_title">가입하기</string>
    <string name="register_activity_email_edit_box_hint">이메일 주소</string>
    <string name="register_activity_pw_edit_box_hing">비밀번호(6자 이상)</string>
    <string name="register_activity_nickname_edit_box_hint">이름(별명)</string>
    <string name="register_btn">가입하기</string>

    <!-- Login Activity-->
    <string name="login_activity_title">로그인</string>
    <string name="login_activity_email_edit_box_hint">이메일 주소</string>
    <string name="login_activity_pw_edit_box_hint">비밀번호</string>
    <string name="login_activity_login_btn">로그인하기</string>

    <!-- Empty Text-->
    <string name="empty_tv_comment">등록된 댓글이 없습니다.</string>
    <string name="empty_tv_article">등록된 게시글이 없습니다.</string>
    <string name="empty_tv_favorite_article">등록된 관심 글이 없습니다.</string>

    <!-- Error -->
    <string name="register_error_input_email_txt">올바른 이메일 형식이 아닙니다.</string>
    <string name="register_error_input_name_txt">이름은 10자까지만 입력 가능합니다.</string>
    <string name="error_not_exist_input_txt">정보를 입력해주세요.</string>
    <string name="register_error_input_pw_txt">비밀번호가 너무 짧습니다.</string>
    <string name="please_login_txt">로그인을 해주세요.</string>

    <!-- Setting Fragment -->
    <string name="setting_fragment_title">설정</string>
    <string name="setting_fragment_login_txt">로그인 정보</string>
    <string name="setting_fragment_login_default_txt">로그인하세요</string>
    <string name="setting_fragment_version_txt">버전정보</string>
    <string name="setting_fragment_profile_txt">프로필</string>
    <string name="setting_fragment_app_push_txt">푸시 알림</string>
    <string name="setting_fragment_kakao_chatbot_txt">GROUND 챗봇</string>
    <string name="setting_fragment_review_txt">리뷰쓰기</string>
    <string name="setting_fragment_recommend_txt">추천하기</string>
    <string name="setting_fragment_license_txt">라이선스</string>
    <string name="setting_fragment_report_issue_txt">버그신고</string>

    <!-- About Article Activity -->
    <string name="about_article_activity_favorite_btn">관심</string>
    <string name="about_article_activity_comment_btn">댓글</string>
    <string name="about_article_activity_share_btn">공유</string>
    <string name="about_article_activity_comment_hint">댓글을 입력해주세요.</string>
    <string name="about_article_activity_write_comment_btn">댓글 입력</string>

    <!-- App Push Activity -->
    <string name="app_push_activity_title">푸시알림</string>
    <string name="match_comment_push_title">댓글 알림 받기</string>
    <string name="match_comment_push_sub">매치, 용병, 모집 게시글에 댓글이 달렸을 시 알림을 받습니다.</string>
    <string name="match_push_title">매칭완료 알림 받기</string>
    <string name="matching_date_of_match_title">매치 게시글 알림 받기</string>
    <string name="matching_date_of_match_sub">설정한 지역 및 날짜에 게시글이 등록되면 알림을 받습니다.</string>
    <string name="matching_date_of_hire_title">용병 게시글 알림 받기</string>
    <string name="matching_date_of_hire_sub">설정한 지역 및 날짜에 게시글이 등록되면 알림을 받습니다.</string>
    <string name="match_push_sub">관심 설정하신 게시글이 매칭완료가 되면 알림을 받습니다.</string>
    <string name="free_comment_push_title">자유게시판 댓글 알림 받기</string>
    <string name="free_comment_push_sub">게시글에 댓글이 달렸을 시 알림을 받습니다.</string>
    <string name="event_push_title">이벤트 알림 받기</string>
    <string name="event_push_sub">이벤트 및 그라운드 업데이트 알림을 받습니다.</string>

    <!-- Comment Activity -->
    <string name="comment_activity_title">댓글</string>

    <!-- Write Board Activity -->
    <string name="write_board_title">글 쓰기</string>
    <string name="write_board_default_txt">장소 : \n\n\n경기방식 : \n\n\n비용 : \n\n\n팀 소개 : \n\n\n기타 : \n\n\n</string>

    <!-- Edit Board Activity -->
    <string name="edit_board_title">글 수정</string>

    <!-- Board Fragment-->
    <string name="board_fragment_title">게시판</string>

    <!-- Home Fragment-->
    <string name="home_fragment_title">GROUND</string>
    <string name="today_match_sub_tv">오늘의 시합은 그라운드 챗봇을 통해서도 알 수 있습니다.\n설정 > GROUND 챗봇을 통해 친구추가 해보세요.</string>

    <!-- Open Source Activity-->
    <string name="open_source_activity_title">오픈소스 라이선스</string>

    <!-- My Activity-->
    <string name="my_activity_title">MY</string>

    <!-- Formation Activity -->
    <string name="formation_activity_title">전술판</string>

    <!-- Edit Profile Activity -->
    <string name="edit_profile_activity_title">프로필</string>
    <string name="edit_profile_activity_name_hint">이름(별명)</string>

    <!-- Report Dialog -->
    <string name="report_dialog_title">신고하기</string>
    <string name="report_checkbox_txt_1">부적절한 홍보 게시물</string>
    <string name="report_checkbox_txt_2">음란성 또는 욕설 내용</string>

    <!-- Free Board Activity -->
    <string name="free_board_activity_title">자유 게시판</string>
    <string name="free_board_activity_like_btn">좋아요</string>
    <string name="free_board_activity_contents_hint">부적절한 게시글 및 홍보 도배글은 제재대상이 될 수 있습니다</string>

    <!-- MatchingDate Alarm Activity-->
    <string name="matching_date_alarm_activity_sub">원하는 지역 및 시합날짜를 선택하면 게시글이 등록될 때 푸시 알림을 받을 수 있습니다.</string>
    <string name="matching_date_alarm_activity_area_tv">지역을 선택해주세요.</string>
    <string name="matching_date_alarm_activity_matching_date_tv">시합 날짜를 선택해주세요.</string>

    <!-- Help Memo Dialog -->
    <string name="help_txt">- 작성 : +버튼 탭\n\n- 삭제 : 좌 or 우로 스와이프\n\n- 순서 이동 : 꾹 누른 후 이동\n\n- 수정 : 메모 탭</string>

    <string-array name="matching_board_list">
        <item>서울</item>
        <item>도봉/노원/강북/중랑</item>
        <item>성북/동대문/종로</item>
        <item>은평/서대문/마포</item>
        <item>용산/중구</item>
        <item>성동/광진/강동</item>
        <item>송파/서초/강남</item>
        <item>양천/구로/영등포/강서</item>
        <item>금천/관악/동작</item>
        <item>경기</item>
        <item>고양</item>
        <item>인천/부천/김포</item>
        <item>구리/남양주/하남</item>
        <item>시흥/안산/광명</item>
        <item>과천/안양/군포/의왕</item>
        <item>수원/용인/화성/오산</item>
        <item>파주</item>
        <item>성남/광주/이천</item>
        <item>평택/안성</item>
        <item>의정부/양주/그 외</item>
    </string-array>

    <string-array name="recruit_board_list">
        <item>서울</item>
        <item>인천/경기</item>
        <item>대전/세종/충청</item>
        <item>대구/경북</item>
        <item>부산/울산/경남</item>
        <item>광주/전라</item>
        <item>강원</item>
        <item>제주</item>
    </string-array>

    <string-array name="hire_board_list">
        <item>서울</item>
        <item>인천/경기</item>
        <item>대전/세종/충청</item>
        <item>대구/경북</item>
        <item>부산/울산/경남</item>
        <item>광주/전라</item>
        <item>강원</item>
        <item>제주</item>
    </string-array>

    <string-array name="age_list">
        <item>평균 연령</item>
        <item>10대</item>
        <item>20대 초반</item>
        <item>20대 중반</item>
        <item>20대 후반</item>
        <item>30대 초반</item>
        <item>30대 중반</item>
        <item>30대 후반</item>
        <item>40대</item>
        <item>50대</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_formation">FormationActivity</string>
</resources>
