<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5f5f5"
    tools:context="view.SettingFragment">

    <RelativeLayout
        android:id="@+id/app_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_fragment_title"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorBlack"
            android:textSize="18dp"/>
    </RelativeLayout>
    <!--구분선-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:orientation="horizontal"
        android:background="#9E9E9E"></LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9e9e9e"
        android:textSize="13dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="로그인"/>

    <RelativeLayout
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:textSize="15dp"
            android:textColor="@color/colorBlack"
            android:text="@string/setting_fragment_login_txt"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/arrow_right_img"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/user_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="35dp"
            android:layout_alignParentRight="true"
            android:textSize="15dp"
            android:text="@string/setting_fragment_login_default_txt"
            android:textColor="@color/colorMoreGray"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#9e9e9e"
        android:textSize="13dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:text="정보"/>

    <RelativeLayout
    android:id="@+id/profile_btn"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_marginTop="1dp"
    android:background="@color/colorWhite">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="25dp"
        android:textSize="15dp"
        android:textColor="@color/colorBlack"
        android:text="@string/setting_fragment_profile_txt"/>
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentRight="true"
        android:src="@mipmap/arrow_right_img"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/user_nick_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="35dp"
        android:layout_alignParentRight="true"
        android:textSize="15dp"
        android:textColor="@color/colorMoreGray"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/review_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:textSize="15dp"
            android:textColor="@color/colorBlack"
            android:text="@string/setting_fragment_review_txt"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/arrow_right_img"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/app_license_txt"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:textSize="15dp"
            android:textColor="@color/colorBlack"
            android:text="@string/setting_fragment_license_txt"/>
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/arrow_right_img"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:textSize="15dp"
            android:textColor="@color/colorBlack"
            android:text="@string/setting_fragment_version_txt"/>

        <TextView
            android:id="@+id/current_app_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textSize="15dp"
            android:textColor="#BDBDBD"/>
    </RelativeLayout>
</LinearLayout>