<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.IntroActivity"
    android:background="@color/colorPrimary"
    android:id="@+id/background_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="그라운드"
        android:textColor="@color/colorWhite"
        android:textSize="40dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:background="@drawable/intro_register_btn_shape"
                android:text="@string/intro_activity_register_btn"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/intro_login_btn_shape"
                android:text="@string/intro_activity_login_btn"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textSize="13dp"
            android:layout_marginTop="10dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:text="@string/intro_sub_help_txt"
            android:layout_below="@+id/login_layout"
            android:gravity="center_horizontal"/>
    </RelativeLayout>

</RelativeLayout>