<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_round_shape"
    android:gravity="center"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#9E9E9E">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/report_dialog_title"
            android:textStyle="bold"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="17dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="0.5dp"
            android:background="@color/colorWhite">

            <CheckBox
                android:id="@+id/checkbox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="15dp"
                android:text="@string/report_checkbox_txt_1"/>

            <CheckBox
                android:id="@+id/checkbox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:textSize="15dp"
                android:text="@string/report_checkbox_txt_2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="0.5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:text="취소"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="0.25dp"
                android:textSize="15dp"/>

            <Button
                android:id="@+id/report_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:textSize="15dp"
                android:layout_marginLeft="0.25dp"
                android:text="확인"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
