<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="view.MatchingDateAlarmActivity">

    <RelativeLayout
        android:id="@+id/app_title_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:background="@mipmap/back_img_white"/>
        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/back_btn"
            android:text="알림 설정"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:ellipsize="end"
            android:layout_centerVertical="true"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eff0f1">
        <TextView
            android:id="@+id/sub_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="13dp"
            android:textColor="#9e9e9e"
            android:text="@string/matching_date_alarm_activity_sub"/>

        <RelativeLayout
            android:id="@+id/area_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/sub_tv"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/area_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/area_img_black"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/area_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/area_iv"
                android:layout_marginLeft="15dp"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="15dp"
                android:textSize="15dp"
                android:hint="@string/matching_date_alarm_activity_area_tv"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/matching_date_layout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/area_layout"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/matching_date_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/matching_date_img"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/matching_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/matching_date_iv"
                android:layout_marginLeft="15dp"
                android:textColor="@color/colorBlack"
                android:layout_marginRight="15dp"
                android:textSize="15dp"
                android:hint="@string/matching_date_alarm_activity_matching_date_tv"/>
        </RelativeLayout>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/matching_date_layout"
            android:background="@color/colorBlack"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="추가하기"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/alarm_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>